--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQJoinTotall.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQJoinTotall.storyboard
@@ -25,19 +25,22 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="45"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNi-C4-RUL">
-                                        <rect key="frame" x="10" y="7" width="35" height="30"/>
+                                        <rect key="frame" x="10" y="7" width="50" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="35" id="4CG-h6-KQv"/>
+                                            <constraint firstAttribute="width" constant="50" id="4CG-h6-KQv"/>
                                             <constraint firstAttribute="height" constant="30" id="gI0-8s-x4E"/>
                                         </constraints>
                                         <state key="normal" title="全部"/>
+                                        <connections>
+                                            <action selector="allProjectPickerButtonClick:" destination="HlC-xv-DhW" eventType="touchUpInside" id="X4y-ZI-YSi"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="故障地点" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wSg-0K-29H">
-                                        <rect key="frame" x="180" y="7" width="150" height="30"/>
+                                        <rect key="frame" x="190" y="7" width="140" height="30"/>
                                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="M8V-lU-h8E"/>
-                                            <constraint firstAttribute="width" constant="150" id="Sm7-lP-9ng"/>
+                                            <constraint firstAttribute="width" constant="140" id="Sm7-lP-9ng"/>
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -56,26 +59,29 @@
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="caret_down" translatesAutoresizingMaskIntoConstraints="NO" id="95b-d4-me6">
-                                        <rect key="frame" x="156" y="17.5" width="15" height="10"/>
+                                        <rect key="frame" x="167" y="17.5" width="15" height="10"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="10" id="oSO-s7-l9u"/>
                                             <constraint firstAttribute="width" constant="15" id="pQw-dc-ic8"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="caret_down" translatesAutoresizingMaskIntoConstraints="NO" id="sNK-uO-g2Z">
-                                        <rect key="frame" x="49" y="17.5" width="14" height="10"/>
+                                        <rect key="frame" x="62" y="17.5" width="14" height="10"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="10" id="Db4-0c-78n"/>
                                             <constraint firstAttribute="width" constant="14" id="wdk-PJ-Rc7"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IaG-cc-Cnm">
-                                        <rect key="frame" x="67" y="7" width="85" height="30"/>
+                                        <rect key="frame" x="80" y="7" width="85" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="4eG-AP-P7X"/>
                                             <constraint firstAttribute="width" constant="85" id="7ok-sz-xa5"/>
                                         </constraints>
                                         <state key="normal" title="2017-04-10"/>
+                                        <connections>
+                                            <action selector="datePickerButtonClick:" destination="HlC-xv-DhW" eventType="touchUpInside" id="kYY-FN-RqL"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -88,10 +94,10 @@
                                     <constraint firstItem="sNK-uO-g2Z" firstAttribute="centerY" secondItem="xSE-yM-Hwt" secondAttribute="centerY" id="Yc3-en-ced"/>
                                     <constraint firstItem="95b-d4-me6" firstAttribute="centerY" secondItem="xSE-yM-Hwt" secondAttribute="centerY" id="ePA-uM-LRX"/>
                                     <constraint firstItem="cNi-C4-RUL" firstAttribute="centerY" secondItem="xSE-yM-Hwt" secondAttribute="centerY" id="gAy-tw-apV"/>
-                                    <constraint firstItem="sNK-uO-g2Z" firstAttribute="leading" secondItem="cNi-C4-RUL" secondAttribute="trailing" constant="4" id="kJR-sq-VVO"/>
+                                    <constraint firstItem="sNK-uO-g2Z" firstAttribute="leading" secondItem="cNi-C4-RUL" secondAttribute="trailing" constant="2" id="kJR-sq-VVO"/>
                                     <constraint firstItem="zAa-vZ-0OQ" firstAttribute="centerY" secondItem="xSE-yM-Hwt" secondAttribute="centerY" id="knW-RM-1Cy"/>
                                     <constraint firstItem="IaG-cc-Cnm" firstAttribute="centerY" secondItem="xSE-yM-Hwt" secondAttribute="centerY" id="t6f-YP-kgM"/>
-                                    <constraint firstItem="95b-d4-me6" firstAttribute="leading" secondItem="IaG-cc-Cnm" secondAttribute="trailing" constant="4" id="wyR-OO-tv3"/>
+                                    <constraint firstItem="95b-d4-me6" firstAttribute="leading" secondItem="IaG-cc-Cnm" secondAttribute="trailing" constant="2" id="wyR-OO-tv3"/>
                                     <constraint firstItem="zAa-vZ-0OQ" firstAttribute="leading" secondItem="wSg-0K-29H" secondAttribute="trailing" constant="5" id="yjT-yF-1ht"/>
                                 </constraints>
                             </view>
@@ -181,6 +187,9 @@
                     </view>
                     <connections>
                         <outlet property="detailTableV" destination="hyb-dz-fWA" id="2vA-86-CVb"/>
+                        <outlet property="seachTextField" destination="wSg-0K-29H" id="bRa-3O-ErF"/>
+                        <outlet property="timeButton" destination="IaG-cc-Cnm" id="zjD-ds-0NE"/>
+                        <outlet property="titleButton" destination="cNi-C4-RUL" id="3Xs-KN-SLq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8cn-6u-0cC" userLabel="First Responder" sceneMemberID="firstResponder"/>
