--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQDrawerViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQDrawerViewController.xib
@@ -42,6 +42,9 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4D-oc-JCB">
                             <rect key="frame" x="156" y="151" width="62" height="30"/>
                             <state key="normal" title="个人资料"/>
+                            <connections>
+                                <action selector="personalProfileButtonClick:" destination="-1" eventType="touchUpInside" id="E92-Yu-jxo"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
